# scriptorum

./: .gitignore  CLAUDE.md  Caddyfile  Caddyfile.testserver  Cargo.toml  README.md  flake.nix  justfile
.githooks/: pre-commit
.github/workflows/: ci.yml
android/: gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: config.json
android/app/src/main/java/com/scriptorum/app/: MainActivity.kt  NativeBridge.kt  NetworkController.kt  SyncService.kt  WifiController.kt  WireGuardController.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
certificates/: gen-ca.sh  gen-client-cert.sh  gen-server-cert.sh  justfile
crates/scriptorum-android/: Cargo.toml
crates/scriptorum-android/src/: lib.rs
crates/scriptorum-core/: Cargo.toml
crates/scriptorum-core/src/: checksum.rs  client.rs  lib.rs  protocol.rs  scanner.rs  sync.rs
crates/scriptorum-server/: Cargo.toml
crates/scriptorum-server/src/: api.rs  lib.rs  main.rs  storage.rs
crates/scriptorum-server/tests/: e2e.rs
scripts/: gen-certs.sh  gen-placeholder-certs.sh  inject-certs.sh
