[package]
name = "scriptorum-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
client = ["ureq"]

[dependencies]
anyhow = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ureq = { version = "2", features = ["json"], optional = true }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
