[package]
name = "scriptorum-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
client = ["ureq", "rustls", "rustls-pemfile"]

[dependencies]
anyhow = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"], optional = true }
rustls-pemfile = { version = "2", optional = true }
ureq = { version = "2", features = ["json"], optional = true }
walkdir = "2"

[dev-dependencies]
rcgen = "0.13"
tempfile = "3"
